# SalasTech-backend

./: .coverage  .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.render  .gitignore  CLI.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  RegraNegocio.md  Teste_api_front.txt  create_admin.py  db.sqlite  db.sqlite  # Caminho relativo ou absoluto para o arquivo SQLite  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  package-lock.json  package.json  populate_database.py  pyproject.toml  requirements.txt  setup.py  tasks.md
.github/workflows/: ci.yml
app/: ajuste.md  main.py  migration_manager.sh
app/admin/: README.md  __init__.py  config.py
app/core/: __init__.py  config.py  db_context.py  dependencies.py  lifespan.py
app/exceptions/: handler.py
app/models/: db.py  dto.py
app/repos/: department_repo.py  reservation_repo.py  room_repo.py
app/services/: department_service.py  notification_service.py  report_service.py  reservation_service.py  room_service.py  user_service.py
app/templates/: auth.jinja  base.jinja  login.jinja  main.jinja  password_reset.jinja  redirect.jinja  register.jinja
app/utils/: seed_database.py
app/views/: auth_view.py  dashboard_view.py  reservation_view.py  room_view.py
backups/: db_backup_20250626_091020.sqlite  db_backup_20250626_092930.sqlite  db_backup_20250626_094047.sqlite
cli/: main.py
docs/: API.md  API_Exemplos.md  Arquitetura.md  CLI.md  Contribuicao.md  Docker.md  Instalacao.md  ManualUsuario.md  MigracaoSeguranca.md  RegrasDeSistema.md  plano_de_testes.md
frontend/: nuxt.config.ts
frontend/composables/: use-auth.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.ts
migrations/: README.md  __init__.py  alembic.ini  alembic_utils.py  check_migrations.py  env.py  migrate.py  migration_config.py  migration_manager.py  migration_recovery.py  requirements.txt  stamp.py
nginx/: nginx.conf
scripts/: backup_database.py  create_admin.py  dev.sh  monitor_database.py  optimize_database.py  populate_database.py  run_tests.py  setup.py  setup_backup_cron.sh
tests/: conftest.py
(+234 files in other folders)
