[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "salstech"
version = "0.1.0"
description = "CLI para gerenciamento do sistema SalsTech"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=14.0.0",
    "rich-toolkit>=0.14.7",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.1.0",
]

[project.scripts]
salstech = "salstech.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
