[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "SalasTech" # Corrigido: Adicionado aspas duplas de fechamento
version = "0.1.0"
description = "Backend SalasTech"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=14.0.0",
    "rich-toolkit>=0.14.7",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.1.0",
    "alembic==1.16.1",
    "APScheduler==3.11.0",
    "bcrypt==4.3.0",
    "email-validator==2.2.0", # Corrigida a hifenização de underline para hífen
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7", # Manter se você usa este CLI diretamente
    "httpx==0.28.1", # Comum para testes de API ou requisições externas
    "Jinja2==3.1.6", # Incluir se estiver usando templating
    "passlib==1.7.4",
    "psycopg2-binary==2.9.10",
    "PyJWT==2.10.1",
    "PyMySQL==1.1.1", # Incluir se estiver usando MySQL, caso contrário, considerar remover
    "python-multipart==0.0.20",
    "SQLAlchemy==2.0.41",
    "uvicorn==0.34.2",
    # Nota: Muitas entradas da sua lista original eram dependências transitivas
    # (dependências de outros pacotes que você listou) e são instaladas automaticamente
    # pelo pip/seu gerenciador de pacotes. Listar apenas as dependências diretas mantém esta
    # lista limpa e gerenciável.
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.1.1",
    "coverage==7.8.2", # Adicione explicitamente se pytest-cov precisar de uma versão específica ou se você o usa diretamente
]

[project.scripts]
SalasTech = "SalasTech.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]